--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
   letter-spacing: .1em;
   background: var(--dark);
   color: var(--light);
-  font-family: 'Poiret One', cursive;
+  font-family: Trebuchet MS, sans-serif;
 
 }
 
@@ -241,7 +241,13 @@ textarea {
   margin-bottom: 50px;
   cursor: pointer;
 }
+.f-img-thumbnail {
+  width: 10vh;
+  height: 10vh;
+  margin: 1rem;
+  justify-content: space-between;
 
+}
 .modalBackdrop {
 	background: rgba(0, 0, 0, .65);
 	bottom: 0;
@@ -296,4 +302,15 @@ a {
 
 .center {
   margin: auto;
+}
+
+
+footer {
+  background: magenta;
+    position: absolute;
+    right: 0;
+    left: 0;
+    margin-top: 100vh;
+    padding: 1rem;
+    text-align: center;
 }
