--- a/src/index.css
+++ b/src/index.css
@@ -241,13 +241,7 @@ textarea {
   margin-bottom: 50px;
   cursor: pointer;
 }
-.f-img-thumbnail {
-  width: 10vh;
-  height: 10vh;
-  margin: 1rem;
-  justify-content: space-between;
 
-}
 .modalBackdrop {
 	background: rgba(0, 0, 0, .65);
 	bottom: 0;
@@ -308,9 +302,17 @@ a {
 footer {
   background: magenta;
     position: absolute;
-    right: 0;
+    width: 100%;
     left: 0;
-    margin-top: 100vh;
-    padding: 1rem;
-    text-align: center;
+    margin-top: 100vh;    
+}
+
+footer img{
+  width: 6%;
+  height: 6%;
+  margin: 2% 6%;
+
+  display: flex;
+  justify-content:space-between;
+
 }
